Template Java 22 avec Gradle